Added serializers to api

--- a/TaskManager/pyproject.toml
+++ b/TaskManager/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 django = "^4.2"
 psycopg2-binary = "^2.9.6"
 djangorestframework = "^3.14.0"
+django-filter = "^23.1"
+markdown = "^3.4.3"
 
 [tool.poetry.dev-dependencies]
 
