--- a/TaskManager/pyproject.toml
+++ b/TaskManager/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2-binary = "^2.9.6"
 djangorestframework = "^3.14.0"
 django-filter = "^23.1"
 markdown = "^3.4.3"
+drf-yasg = "^1.21.5"
 
 [tool.poetry.dev-dependencies]
 
