--- a/TaskManager/pyproject.toml
+++ b/TaskManager/pyproject.toml
@@ -13,6 +13,7 @@ django-filter = "^23.1"
 markdown = "^3.4.3"
 drf-yasg = "^1.21.5"
 djangorestframework-simplejwt = "^5.2.2"
+factory-boy = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 
